2011-04-26  Dawit Alemayehu  <adawit@kde.org>

Reviewed by Andreas Kling.

        Added qtwebkit layout test for the button line break fix (Bug 50521).

        [Qt] Improper rendering of <button> tag when it contains a <br>
        https://bugs.webkit.org/show_bug.cgi?id=50521

        * platform/qt/fast/forms/button-line-break-expected.txt: Added.
        * platform/qt/fast/forms/button-line-break.html: Added.
2011-04-26  Dawit Alemayehu  <adawit@kde.org>

        Reviewed by Andreas Kling.

        [Qt] Improper rendering of <button> tag when it contains a <br>
        https://bugs.webkit.org/show_bug.cgi?id=50521

        Test: platform/qt/fast/forms/button-line-break.html

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::computeSizeBasedOnStyle):
        (WebCore::RenderThemeQt::setButtonPadding):

Canonical link: https://commits.webkit.org/74729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85009 268f45cc-cd09-0410-ab3c-d52691b4dbfc